[package]
name = "plotly-types"
version = "1.54.1-0.1.1"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"
description = "bindings for https://github.com/plotly/plotly.js"
repository = "https://github.com/M1cha/plotly-types-rs"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
json = "0.12"
convert_case = "0.3"
error-rules = "1.0"